--- a/content/post/2024-07-29-post-title/index.Rmd
+++ b/content/post/2024-07-29-post-title/index.Rmd
@@ -9,7 +9,7 @@ tags: [Comparison, side-by-side, vs.]
 
 # Capturing information
 
-Being a modern birder, it's quite important to take good photos. Proof of identification is without exception the difference between ecstacy and life-long bitterness over the one that got away. I quite recently got a new phone and I'm curious about its capabilities of taking good photos, both in terms of being able to absorb useful information on a pixel level, but also in terms of taking aesthetic photos of birds and their surroundings. This space is all about exploring this.
+As a modern birder, good photos are central. Proof of identification is the difference between ecstacy and catastrophe. I recently got a new phone and I'm curious about its capabilities of taking good photos, both in terms of being able to capture useful information on a pixel level, but also in terms of taking aesthetic photos of birds and their surroundings. 
 
 # Some notes on editing
 
